Add main functions

--- a/app/assets/stylesheets/header.sass
+++ b/app/assets/stylesheets/header.sass
@@ -3,13 +3,17 @@ body
   color: #c90
 
 .logo
-  margin-left: 31%
+  display: flex
+  justify-content: center
 
 .herbarium-nav
   background-color: transparent !important
   border-color: transparent !important
   margin: 5px
   border-bottom: 1px solid #c90 !important
+
+  .active
+    font-weight: bold
 
   a
     color: #c90 !important
