--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,3 +2,7 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 @import "header.sass";
+@import 'exemplars.scss';
+@import 'comments.scss';
+@import 'select2';
+@import 'select2-bootstrap';
