--- a/app/assets/stylesheets/exemplars.scss
+++ b/app/assets/stylesheets/exemplars.scss
@@ -1,3 +1,64 @@
 // Place all the styles related to the Exemplars controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.bold-text {
+  font-weight: bold;
+}
+
+.user-row {
+  margin-bottom: 14px;
+}
+
+.user-row:last-child {
+  margin-bottom: 0;
+}
+
+.dropdown-user {
+  margin: 13px 0;
+  padding: 5px;
+  height: 100%;
+}
+
+.dropdown-user:hover {
+  cursor: pointer;
+}
+
+.table-user-information > tbody > tr {
+  border-top: 1px solid rgb(221, 221, 221);
+}
+
+.table-user-information > tbody > tr:first-child {
+  border-top: 0;
+}
+
+
+.table-user-information > tbody > tr > td {
+  border-top: 0;
+}
+.toppad
+{
+  margin-top:20px;
+}
+
+.filters-line {
+  border: solid 1px #c90;
+  border-radius: 2px;
+  padding: 10px;
+
+  label {
+    display: block;
+  }
+
+  .filter-block {
+    display: inline-block;
+    margin-right: 10px;
+
+    &.right {
+      float: right;
+    }
+  }
+
+  .btn-default {
+    border-color: #c90 !important;
+  }
+}
