--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,12 +4,12 @@
     <title>HerbariumSystem</title>
     <%= csrf_meta_tags %>
 
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_link_tag    'application', media: 'all' %>
+    <%= javascript_include_tag 'application' %>
   </head>
 
   <body>
-    <div class="logo"> <%= image_tag('logo.png', width: 450) %> </div>
+    <div class="logo"> <%= image_tag('logo.png', width: 350) %> </div>
     <div class="col-md-10 content-block">
       <div class="panel panel-default">
         <%= render 'layouts/header.html.slim' %>
