--- a/app/views/exemplars/show.html.slim
+++ b/app/views/exemplars/show.html.slim
@@ -6,8 +6,8 @@
       div class="panel-body"
         div class="row"
           div class="col-md-3 col-lg-3 " align="center"
-            - @exemplar.exemplar_images.each do |image|
-              = image_tag image.image.url(:medium), class: 'img-responsive'
+            - @exemplar.images.each do |image|
+              = image_tag rails_blob_url(image), class: 'img-responsive'
           div class=" col-md-9 col-lg-9"
             table class="table table-user-information"
               tbody
